// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esbuild-plugin-liquid-schemas > can load a schema with an import alias 1`] = `
"{%- # import schema from '@schemas/section.ts' -%}

<h1>section.liquid</h1>

{% schema %}
{
  "name": "esbuild-plugin-liquid-schemas",
  "tests": [
    "with-import-alias"
  ]
}
{% endschema %}"
`;

exports[`esbuild-plugin-liquid-schemas > can output a schema with plugin transformations 1`] = `
"<h1>section.liquid</h1>

{% schema %}
{
  "name": "esbuild-plugin-liquid-schemas",
  "tests": [
    "with-plugin-transformations"
  ]
}
{% endschema %}
"
`;

exports[`esbuild-plugin-liquid-schemas > can output a section with import schema comment 1`] = `
"{%- # import schema from '../schemas/section.ts' -%}

<h1>section.liquid</h1>

{% schema %}
{
  "name": "esbuild-plugin-liquid-schemas",
  "tests": [
    "with-import-schema-comment"
  ]
}
{% endschema %}"
`;

exports[`esbuild-plugin-liquid-schemas > can support a customer formatter 1`] = `
"formatter-start
{%- # import schema from '../schemas/section.ts' -%}

<h1>section.liquid</h1>

{% schema %}
{
  "name": "esbuild-plugin-liquid-schemas",
  "tests": [
    "with-custom-formatter"
  ]
}
{% endschema %}
formatter-end"
`;

exports[`esbuild-plugin-liquid-schemas > can support a prettier formatting 1`] = `
"{%- # import schema from '../schemas/section.ts' -%}

<h1>section.liquid</h1>

{% schema %}
{
  "name": "esbuild-plugin-liquid-schemas",
  "tests": ["with-prettier-formatting"]
}
{% endschema %}
"
`;
